--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,49 @@
 :root {
   font-size: 15px;
+  --primary: #505050;
+  --accent: #6b00b5;
+  --reverse: #ececec;
+  --brightest: #f4f4f4;
+  --shadow: rgba(80,80,80,0.25);
 }
 body {
-  color: #777;
+  width: 90%;
+  margin: 1em auto;
+  background: var(--primary);
+  color: var(--primary);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  line-height: 1.5;
+}
+h1 {
+  color: var(--reverse);
+  margin-top: .75em;
+  margin-bottom: .25em;
+}
+button {
+  margin: 1em auto;
+  padding: 1em 2em;
+  font-size: .9em;
+  font-weight: 600;
+  color: var(--reverse);
+  text-transform: uppercase;
+  background-color: var(--accent);
+  border: none;
+  border-radius: 4px;
+}
+.hero {
+  display: grid;
+  grid-gap: 1.5em;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background: var(--brightest);
+  border: 2px solid var(--primary);
+  padding: 3em;
+  box-shadow: 2px 2px 14px var(--shadow);
+}
+.hero h2, .hero p {
+  text-align: center;
 }
