--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ h1 {
   margin-top: .75em;
   margin-bottom: .25em;
 }
+body > p {
+  color: var(--reverse);
+}
 button {
   margin: 1em auto;
   padding: 1em 2em;
