--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,10 @@ body {
 h1 {
   color: var(--reverse);
   margin-top: .75em;
-  margin-bottom: .25em;
+  margin-bottom: 0;
 }
 body > p {
+  margin-top: 0;
   color: var(--reverse);
 }
 button {
