--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,13 @@ button {
   color: var(--reverse);
   text-transform: uppercase;
   background-color: var(--accent);
-  box-shadow: 2px 2px 14px var(--shadow);
+  box-shadow: 3px 3px 12px var(--shadow);
   border: none;
   border-radius: 4px;
+  transition: all .3s ease-in;
+}
+button:hover {
+  box-shadow: 2px 2px 28px var(--shadow);
 }
 .hero, .singleton section {
   display: grid;
@@ -69,8 +73,18 @@ section h2, section p {
 }
 .stats {
   display: grid;
-  grid-template-columns: 2fr 3fr;
+  grid-template-columns: 1fr 3fr;
   grid-gap: 3em;
+}
+.stats div {
+  padding: 1em;
+}
+.stats h3 {
+  border-bottom: 1px solid var(--primary)
+}
+.stats table {
+  display: flex;
+  justify-content: flex-start;
 }
 .stats h2 {
   margin-bottom: 0;
@@ -78,10 +92,8 @@ section h2, section p {
 .stats h2, .stats p {
   text-align: left;
 }
-table {
-  border: 1px solid var(--accent);
-}
 .stats td {
+  height: 2em;
   min-width: 3em;
 }
 .stats td:first-child {
