--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ nav {
 .nav-links {
   flex-grow: 2;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .hero, .singleton section {
   display: grid;
