--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,35 @@
 :root {
+  scroll-behavior: smooth;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 300;
   --primary: #505050;
   --accent: #6b00b5;
-  --reverse: #ececec;
+  --nav-accent: #8d6393;
+  --reverse: #c1c1c1;
   --brightest: #f4f4f4;
   --shadow: rgba(80,80,80,0.75);
 }
 a:link, a:visited {
-  color: var(--reverse);
+  font-weight: 500;
+  color: var(--brightest);
+  transition: all .25s ease-in-out;
   text-decoration: none;
 }
 a:hover, a:active {
-  color: var(--brightest);
+  opacity: 0.7;
 }
 strong {
   font-weight: 900;
+}
+a.top {
+  font-size: .5em;
+  font-weight: 400;
+  background: var(--nav-accent);
+  padding: .35em .8em;
+  border-radius: 5px;
+  border: .5px solid var(--brightest);
+  position: relative;
+  bottom: .25em;
 }
 body {
   width: 94%;
@@ -25,6 +39,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.5;
   font-size: 1rem;
+  position: relative;
 }
 
 h1 {font-size: 1.5rem;}
@@ -47,14 +62,14 @@ h1:first-of-type {
 }
 body > p {
   margin-top: 0;
-  color: var(--reverse);
+  color: var(--brightest);
 }
 button {
   margin: .5em auto;
   padding: .75em 2em;
   font-size: .9em;
   font-weight: 600;
-  color: var(--reverse);
+  color: var(--brightest);
   text-transform: uppercase;
   background-color: var(--accent);
   box-shadow: 3px 3px 12px var(--shadow);
@@ -139,9 +154,10 @@ section h2, section p {
   text-align: center;
 }
 footer {
+  font-size: .85em;
   margin-top: 1em;
   text-align: center;
-  padding: .5em;
+  padding: .5em .5em;
   color: var(--reverse);
   border-top: 1px solid var(--reverse);
   border-bottom: 1px solid var(--reverse);
